--- a/.github/workflows/check_markup_links.yml
+++ b/.github/workflows/check_markup_links.yml
@@ -2,13 +2,23 @@ name: Check markup links
 on:
   workflow_dispatch:
 jobs:
-  build:
+  markdown-link-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: '14'
-      - name: Run markup check
-        run: |
-          bash .github/workflows/scripts_new/run_markup_check.sh
+    - uses: actions/checkout@v4
+    - uses: tcort/github-action-markdown-link-check@v1
+
+# name: Check markup links
+# on:
+#   workflow_dispatch:
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-node@v4
+#         with:
+#           node-version: '14'
+#       - name: Run markup check
+#         run: |
+#           bash .github/workflows/scripts_new/run_markup_check.sh
