--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -3,6 +3,7 @@ pytest
 git+https://github.com/taichi-dev/pytest-xdist@a3b5ad3038#egg=pytest-xdist
 pytest-rerunfailures
 pytest-cov
+pytest-retry
 numpy
 psutil
 autograd
