remember to run prerequisiteis

--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           submodules: true
           fetch-depth: 0
+      - name: Windows 2025 pre-requisites
+        run: |
+          & .\.github\workflows\scripts_new\win\1_prerequisites.ps1
       - name: Windows 2025 build
         run: |
           & .\.github\workflows\scripts_new\win\2_build.ps1
