add ruff formatting to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,9 @@ blank_line_before_nested_class_or_def = false
 exclude = [
     "external/**/*",
 ]
+
+[tool.ruff.lint]
+select = ["I"]  # Enable import ordering checks
+
+[tool.ruff.lint.isort]
+known-local-folder = ["taichi"]
