--- a/.github/workflows/linux_x86.yml
+++ b/.github/workflows/linux_x86.yml
@@ -1,4 +1,4 @@
-name: Linux x86 on-demand
+name: Linux x86
 on:
   pull_request:
     branches:
@@ -6,6 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
+    name: Linux x86 Build
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
