--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -1,4 +1,4 @@
-name: Windows 2025 on-demand
+name: Windows 2025
 on:
   pull_request:
     branches:
@@ -6,6 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
+    name: Windows 2025 Build
     runs-on: windows-2025
     steps:
       - name: Python check
