--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
       - name: Checkout
         uses: actions/checkout@v4
         with:
