--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -22,6 +22,8 @@ jobs:
       - name: Mac OS X install
         run: |
           bash .github/workflows/scripts_new/macosx/3_install.sh
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
       - name: Mac OS X test
         run: |
           bash .github/workflows/scripts_new/macosx/4_test.sh
