--- a/.github/workflows/manylinux_wheel.yml
+++ b/.github/workflows/manylinux_wheel.yml
@@ -27,6 +27,7 @@ jobs:
   test_wheel:
     name: Manylinux wheel Test
     runs-on: ubuntu-22.04
+    needs: build_wheel
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
