--- a/.github/workflows/manylinux_wheel.yml
+++ b/.github/workflows/manylinux_wheel.yml
@@ -9,6 +9,10 @@ jobs:
     name: Manylinux wheel Build
     runs-on: ubuntu-22.04
     container: quay.io/pypa/manylinux_2_28_x86_64:latest
+    strategy:
+      matrix:
+        PYTHON_VERSION: ['cp310']
+        # PYTHON_VERSION: ['cp310', 'cp311', 'cp312', 'cp313']
     steps:
       - uses: actions/checkout@v4
       - name: manylinux wheel prerequisites
@@ -16,23 +20,31 @@ jobs:
           bash .github/workflows/scripts_new/manylinux_wheel/1_prerequisites.sh
       - name: manylinux wheel build
         run: |
+          export PATH=/opt/python/${PYTHON_VERSION}/bin:$PATH
+          python -V
           bash .github/workflows/scripts_new/manylinux_wheel/2_build.sh
       - name: manylinux wheel check
         run: |
+          export PATH=/opt/python/${PYTHON_VERSION}/bin:$PATH
+          python -V
           bash .github/workflows/scripts_new/manylinux_wheel/3_check.sh
       - uses: actions/upload-artifact@v4
         with:
-          name: manylinux_wheel
+          name: manylinux_wheel_${{ matrix.PYTHON_VERSION }}
           path: dist/*.whl
   test_wheel:
     name: Manylinux wheel Test
     runs-on: ubuntu-22.04
     needs: build_wheel
+    strategy:
+      matrix:
+        PYTHON_VERSION: ['cp310']
+        # PYTHON_VERSION: ['cp310', 'cp311', 'cp312', 'cp313']
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
-          name: manylinux_wheel
+          name: manylinux_wheel_${{ matrix.PYTHON_VERSION }}
       - name: manylinux install wheel
         run: |
           bash .github/workflows/scripts_new/manylinux_wheel/4_install_wheel.sh
