--- a/.github/workflows/manylinux_wheel.yml
+++ b/.github/workflows/manylinux_wheel.yml
@@ -38,13 +38,19 @@ jobs:
     needs: build_wheel
     strategy:
       matrix:
-        PYTHON_VERSION: ['cp310']
+        include:
+          - PYTHON_CP_VERSION: 'cp310'
+            PYTHON_VERSION: '3.10'
         # PYTHON_VERSION: ['cp310', 'cp311', 'cp312', 'cp313']
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
-          name: manylinux_wheel_${{ matrix.PYTHON_VERSION }}
+          name: manylinux_wheel_${{ matrix.PYTHON_CP_VERSION }}
+      - name: Python check
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.PYTHON_VERSION }}
       - name: manylinux install wheel
         run: |
           bash .github/workflows/scripts_new/manylinux_wheel/4_install_wheel.sh
