--- a/.github/workflows/api_doc.yml
+++ b/.github/workflows/api_doc.yml
@@ -1,8 +1,9 @@
 name: api docs build
 
 on:
-  push:
-    branches: [ "main" ]
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 concurrency:
@@ -25,6 +26,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          destination_dir: ${{ github.ref_name }}
+          destination_dir: ${{ github.head_ref }}
           keep_files: true
           publish_branch: gh-pages
