--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = [
     "setuptools", "wheel",
     "numpy", "pybind11", "cmake",
     "scikit-build", "ninja; platform_system != 'Windows'",
+    "psutil",
 ]
 build-backend = "setuptools.build_meta"
 
