--- a/.github/workflows/manylinux_wheel.yml
+++ b/.github/workflows/manylinux_wheel.yml
@@ -11,8 +11,7 @@ jobs:
     container: quay.io/pypa/manylinux_2_28_x86_64:latest
     strategy:
       matrix:
-        PYTHON_CP_VERSION: ['cp310']
-        # PYTHON_CP_VERSION: ['cp310', 'cp311', 'cp312', 'cp313']
+        PYTHON_CP_VERSION: ['cp310', 'cp311', 'cp312', 'cp313']
     steps:
       - uses: actions/checkout@v4
       - name: manylinux wheel prerequisites
@@ -40,7 +39,7 @@ jobs:
     environment: aws_storage
     strategy:
       matrix:
-        PYTHON_CP_VERSION: ['cp310']
+        PYTHON_CP_VERSION: ['cp310', 'cp311', 'cp312', 'cp313']
     steps:
       - uses: actions/checkout@v4
       - name: Configure AWS credentials
@@ -69,7 +68,12 @@ jobs:
         include:
           - PYTHON_CP_VERSION: 'cp310'
             PYTHON_VERSION: '3.10'
-        # PYTHON_VERSION: ['cp310', 'cp311', 'cp312', 'cp313']
+          - PYTHON_CP_VERSION: 'cp311'
+            PYTHON_VERSION: '3.11'
+          - PYTHON_CP_VERSION: 'cp312'
+            PYTHON_VERSION: '3.12'
+          - PYTHON_CP_VERSION: 'cp313'
+            PYTHON_VERSION: '3.13'
     steps:
       - uses: actions/checkout@v4
       - name: Configure AWS credentials
