--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,14 @@
 [build-system]
 requires = [
-    "setuptools", "wheel",
-    "numpy", "pybind11", "cmake",
-    "scikit-build", "ninja; platform_system != 'Windows'",
+    "setuptools",
+    "wheel",
+    "numpy",
+    "pybind11",
+    "cmake",
+    "scikit-build",
+    "ninja; platform_system != 'Windows'",
+    "setuptools>=68.0.0",
+    "cffi>=1.16.0",
 ]
 build-backend = "setuptools.build_meta"
 
