--- a/.github/workflows/api_doc.yml
+++ b/.github/workflows/api_doc.yml
@@ -1,9 +1,13 @@
 name: api docs build
 
 on:
-  pull_request:
-    branches:
-      - main
+  # pull_request:
+  #   branches:
+  #     - main
+  workflow_run:
+    workflows: ["Manylinux wheel build"]
+    types:
+      - completed  
   workflow_dispatch:
 
 concurrency:
@@ -14,14 +18,34 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: aws_storage
     steps:
       - uses: actions/checkout@v4
-
-      - name: Build
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Download artifact
+        run: |
+          set -x
+          aws s3 sync s3://genesis-ai-compiler/ci/taichi/${GITHUB_SHA:0:7}/cp310/ dist/
+      - name: Python check
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: manylinux install wheel
+        run: |
+          set -x
+          ls -lh dist/
+          pip install dist/*.whl
+          python -c 'import taichi as ti; ti.init(arch=ti.cpu); print(ti.__version__)'
+      - name: Build docs
         run: |
           pip install pdoc
           pdoc --output-dir public taichi
-      - name: Deploy
+      - name: Deploy docs
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
