--- a/.github/workflows/manylinux_wheel.yml
+++ b/.github/workflows/manylinux_wheel.yml
@@ -104,6 +104,8 @@ jobs:
   api_docs:
     uses: ./.github/workflows/api_doc.yml
     needs: upload_to_storage
+    with:
+      head_ref: ${{ github.head_ref }}
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
