--- a/.github/workflows/api_doc.yml
+++ b/.github/workflows/api_doc.yml
@@ -53,6 +53,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
-          destination_dir: ${{ github.event.inpus.head_ref || github.head_ref }}
+          destination_dir: ${{ github.event.inputs.head_ref || github.head_ref }}
           keep_files: true
           publish_branch: gh-pages
