--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -9,15 +9,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        MAC_OS_VERSION: [14]
+        PYTHON_CP_VERSION: [cp310, cp311, cp312, cp313]
         include:
-          - MAC_OS_VERSION: 14
-            PYTHON_CP_VERSION: cp310
-          - MAC_OS_VERSION: 14
-            PYTHON_CP_VERSION: cp311
-          - MAC_OS_VERSION: 14
-            PYTHON_CP_VERSION: cp312
-          - MAC_OS_VERSION: 14
-            PYTHON_CP_VERSION: cp313
           - MAC_OS_VERSION: 15
             PYTHON_CP_VERSION: cp310
     name: Mac OS Build
@@ -47,15 +41,9 @@ jobs:
     environment: aws_storage
     strategy:
       matrix:
+        MAC_OS_VERSION: [14]
+        PYTHON_CP_VERSION: [cp310, cp311, cp312, cp313]
         include:
-          - MAC_OS_VERSION: 14
-            PYTHON_CP_VERSION: cp310
-          - MAC_OS_VERSION: 14
-            PYTHON_CP_VERSION: cp311
-          - MAC_OS_VERSION: 14
-            PYTHON_CP_VERSION: cp312
-          - MAC_OS_VERSION: 14
-            PYTHON_CP_VERSION: cp313
           - MAC_OS_VERSION: 15
             PYTHON_CP_VERSION: cp310
       fail-fast: false
