--- a/.github/workflows/manylinux_wheel.yml
+++ b/.github/workflows/manylinux_wheel.yml
@@ -4,8 +4,8 @@ on:
     branches:
       - main
   workflow_dispatch:
-permissions:
-  contents: write
+# permissions:
+#   contents: write
 jobs:
   build_wheel:
     name: Manylinux wheel Build
