--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = [
     "setuptools>=68.0.0",
     "wheel",
-    "numpy>=2.0.0",
+    "numpy",
     "pybind11",
     "pybind11-stubgen",
     "cmake>=3.11",
