--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -11,20 +11,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - PYTHON_CP_VERSION: 'cp310'
-            PYTHON_VERSION: '3.10'
-          - PYTHON_CP_VERSION: 'cp311'
-            PYTHON_VERSION: '3.11'
-          - PYTHON_CP_VERSION: 'cp312'
-            PYTHON_VERSION: '3.12'
-          - PYTHON_CP_VERSION: 'cp313'
-            PYTHON_VERSION: '3.13'
+        PYTHON_VERSION: ['3.10', '3.11', '3.12', '3.13']
     steps:
       - name: Python check
         uses: actions/setup-python@v4
         with:
           python-version: ${{ MATRIX.PYTHON_VERSION}}
+      - name: Set Python CP version
+        id: set_cp_version
+        run: |
+          pip install packaging
+          $cp = python -c "from packaging import tags; print(next(tags.sys_tags()).interpreter)"
+          echo "PYTHON_CP_VERSION=$cp"
+          echo "PYTHON_CP_VERSION=$cp" >> $env:GITHUB_OUTPUT
+      - name: Check Python CP version
+        run: |
+          echo "PYTHON_CP_VERSION=${{ steps.set_cp_version.outputs.PYTHON_CP_VERSION }}"
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -44,7 +46,7 @@ jobs:
           & .\.github\workflows\scripts_new\win\4_test.ps1
       - uses: actions/upload-artifact@v4
         with:
-          name: win_wheel_${{ matrix.PYTHON_CP_VERSION }}
+          name: win_wheel_${{ steps.set_cp_version.outputs.python_CP_VERSION }}
           path: dist/*.whl
   upload_to_storage:
     name: Windows wheel upload
@@ -53,11 +55,7 @@ jobs:
     environment: aws_storage
     strategy:
       matrix:
-        include:
-          - PYTHON_CP_VERSION: cp310
-          - PYTHON_CP_VERSION: cp311
-          - PYTHON_CP_VERSION: cp312
-          - PYTHON_CP_VERSION: cp313
+        PYTHON_CP_VERSION: ["cp310", "cp311", "cp312", "cp313"]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
