Revert "try --prefer-binary"
This reverts commit de9a984164bc0ae522d1f1447122bff84743e9ff.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = [
     "setuptools>=68.0.0",
     "wheel",
-    "numpy",
+    "numpy>=2.0.0",
     "pybind11",
     "pybind11-stubgen",
     "cmake>=3.11",
