--- a/.github/workflows/manylinux_wheel.yml
+++ b/.github/workflows/manylinux_wheel.yml
@@ -3,6 +3,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
 permissions:
   contents: write
@@ -107,7 +110,7 @@ jobs:
     uses: ./.github/workflows/api_doc.yml
     needs: upload_to_storage
     with:
-      head_ref: ${{ github.head_ref }}
+      head_ref: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.head_ref }}
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
