--- a/.github/workflows/linux_x86.yml
+++ b/.github/workflows/linux_x86.yml
@@ -8,6 +8,9 @@ jobs:
   build:
     name: Linux x86 Build
     runs-on: ubuntu-22.04
+    concurrency:
+      group: ${{ github.workflow }}-build-${{ github.ref }}
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
       - name: Linux x86 prerequisites
