--- a/.github/workflows/manylinux_wheel.yml
+++ b/.github/workflows/manylinux_wheel.yml
@@ -14,6 +14,9 @@ jobs:
     name: Manylinux wheel Build
     runs-on: ubuntu-22.04
     container: quay.io/pypa/manylinux_2_28_x86_64:latest
+    concurrency:
+      group: ${{ github.workflow }}-build-${{ matrix.PYTHON_CP_VERSION != 'cp310' && github.ref || github.run_id }}
+      cancel-in-progress: ${{ matrix.PYTHON_CP_VERSION != 'cp310' }}
     strategy:
       matrix:
         PYTHON_CP_VERSION: ['cp310', 'cp311', 'cp312', 'cp313']
@@ -43,6 +46,9 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build_wheel
     environment: aws_storage
+    concurrency:
+      group: ${{ github.workflow }}-upload-${{ matrix.PYTHON_CP_VERSION != 'cp310' && github.ref || github.run_id }}
+      cancel-in-progress: ${{ matrix.PYTHON_CP_VERSION != 'cp310' }}
     strategy:
       matrix:
         PYTHON_CP_VERSION: ['cp310', 'cp311', 'cp312', 'cp313']
@@ -70,6 +76,9 @@ jobs:
     runs-on: ubuntu-22.04
     needs: upload_to_storage
     environment: aws_storage
+    concurrency:
+      group: ${{ github.workflow }}-test-${{ matrix.PYTHON_CP_VERSION != 'cp310' && github.ref || github.run_id }}
+      cancel-in-progress: ${{ matrix.PYTHON_CP_VERSION != 'cp310' }}
     strategy:
       matrix:
         include:
@@ -109,6 +118,9 @@ jobs:
   api_docs:
     uses: ./.github/workflows/api_doc.yml
     needs: upload_to_storage
+    concurrency:
+      group: ${{ github.workflow }}-call-apidocs-${{ matrix.PYTHON_CP_VERSION != 'cp310' && github.ref || github.run_id }}
+      cancel-in-progress: ${{ matrix.PYTHON_CP_VERSION != 'cp310' }}
     with:
       head_ref: ${{ github.head_ref || github.ref_name }}
     secrets:
