--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -16,6 +16,9 @@ jobs:
             PYTHON_CP_VERSION: cp310
     name: Mac OS Build
     runs-on: macos-${{ matrix.MAC_OS_VERSION }}
+    concurrency:
+      group: ${{ github.workflow }}-build-${{ github.ref }}
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
       - name: Mac OS X prerequisites
@@ -39,6 +42,9 @@ jobs:
     runs-on: ubuntu-22.04
     needs: build_mac_14_15
     environment: aws_storage
+    concurrency:
+      group: ${{ github.workflow }}-upload-${{ github.ref }}
+      cancel-in-progress: true
     strategy:
       matrix:
         MAC_OS_VERSION: [15]
