--- a/.github/workflows/linux_x86.yml
+++ b/.github/workflows/linux_x86.yml
@@ -9,7 +9,7 @@ jobs:
     name: Linux x86 Build
     runs-on: ubuntu-22.04
     concurrency:
-      group: ${{ github.workflow }}-build-${{ github.ref }}
+      group: ${{ github.workflow }}-${{ github.ref }}-build
       cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
