--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -4,13 +4,13 @@ on:
     branches:
       - main
   workflow_dispatch:
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
 jobs:
   win_build:
     name: Windows 2025 Build
     runs-on: windows-2025
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.PYTHON_VERSION }}-build
-      cancel-in-progress: true
     strategy:
       fail-fast: false
       matrix:
@@ -56,9 +56,6 @@ jobs:
     runs-on: ubuntu-22.04
     needs: win_build
     environment: aws_storage
-    concurrency:
-      group: ${{ github.workflow }}-${{ github.ref }}-${{ matrix.PYTHON_CP_VERSION }}-upload
-      cancel-in-progress: true
     strategy:
       matrix:
         PYTHON_CP_VERSION: ["cp310", "cp311", "cp312", "cp313"]
