--- a/.github/workflows/pyright_linter.yml
+++ b/.github/workflows/pyright_linter.yml
@@ -1,38 +1,52 @@
 name: Pyright linter
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_call:
+    inputs:
+      head_ref:
+        description: 'The head ref (branch name or PR ref)'
+        required: true
+        type: string
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: true
+      AWS_SECRET_ACCESS_KEY:
+        required: true
   workflow_dispatch:
 jobs:
   build:
     name: Pyright Linter
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    environment: aws_storage
     steps:
-      # looks like we need to first build the dll...
-      # easiest way to do that is to build the wheel
-      # at some point, we should probably have a separate wheel building thing
-      # that will upload to somewhere
-      # and other runners can use that pre-built wheel?
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Download artifact
+        run: |
+          set -x
+          aws s3 sync s3://genesis-ai-compiler/ci/taichi/${GITHUB_SHA:0:7}/cp310/ dist/
       - name: Python check
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: 1_prerequisites
+      - name: install stubs, from wheel, and dev install taichi
         run: |
-            bash .github/workflows/scripts_new/pyright_linter/1_prerequisites.sh
-      - name: 2_build
+          set -x
+          ls -lh dist/
+          unzip dist/*.whl -d dist
+          mkdir -p stubs/taichi/_lib/core
+          cp dist/taichi/_lib/core/taichi_python.pyi stubs/taichi/_lib/core/
+          touch stubs/taichi/_lib/core/py.typed
+          pip install -e .
+      - name: install torch and pyright
         run: |
-            bash .github/workflows/scripts_new/pyright_linter/2_build.sh
-      - name: 3_install
+          pip install torch pyright
+      - name: run pyright
         run: |
-            bash .github/workflows/scripts_new/pyright_linter/3_install.sh
-      - name: 4_build_stubs
-        run: |
-            bash .github/workflows/scripts_new/pyright_linter/4_build_stubs.sh
-      - name: 5_pyright
-        run: |
-            bash .github/workflows/scripts_new/pyright_linter/5_pyright.sh
+          pyright
