--- a/.github/workflows/api_doc.yml
+++ b/.github/workflows/api_doc.yml
@@ -42,11 +42,11 @@ jobs:
         run: |
           set -x
           ls -lh dist/
-          pip install dist/*.whl
+          pip install dist/*.whl[docs]
           python -c 'import taichi as ti; ti.init(arch=ti.cpu); print(ti.__version__)'
+          pip freeze | grep sphinx
       - name: Build docs
         run: |
-          pip install -r requirements_doc.txt
           cd docs
           make html
       - name: Deploy docs
