--- a/.github/workflows/pyright_linter.yml
+++ b/.github/workflows/pyright_linter.yml
@@ -16,7 +16,9 @@ jobs:
   build:
     name: Pyright Linter
     runs-on: ubuntu-latest
-    environment: aws_storage
+    environment:
+      name: aws_storage
+      url:
     steps:
       - uses: actions/checkout@v4
         with:
