--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,17 +1,17 @@
-include python/taichi/*.md
-recursive-include python/taichi/assets *
-recursive-include python/taichi/examples *.py
-include python/taichi/examples/autodiff/diff_sph/fc1_pretrained.pkl
-include python/taichi/examples/autodiff/diff_sph/fc2_pretrained.pkl
-include python/taichi/examples/algorithm/circle-packing/taichi_logo.png
-recursive-include python/taichi/_lib/c_api *
-include python/taichi/_lib/core/*.so
-include python/taichi/_lib/core/*.pyd
-include python/taichi/_lib/runtime/*.bc
-include python/taichi/_lib/runtime/*.dylib
-include python/taichi/shaders/*.spv
-include python/taichi/shaders/*.vert
-include python/taichi/shaders/*.frag
+include python/gs_taichi/*.md
+recursive-include python/gs_taichi/assets *
+recursive-include python/gs_taichi/examples *.py
+include python/gs_taichi/examples/autodiff/diff_sph/fc1_pretrained.pkl
+include python/gs_taichi/examples/autodiff/diff_sph/fc2_pretrained.pkl
+include python/gs_taichi/examples/algorithm/circle-packing/taichi_logo.png
+recursive-include python/gs_taichi/_lib/c_api *
+include python/gs_taichi/_lib/core/*.so
+include python/gs_taichi/_lib/core/*.pyd
+include python/gs_taichi/_lib/runtime/*.bc
+include python/gs_taichi/_lib/runtime/*.dylib
+include python/gs_taichi/shaders/*.spv
+include python/gs_taichi/shaders/*.vert
+include python/gs_taichi/shaders/*.frag
 
 global-exclude *.pyc *.pyo
 global-exclude ffmpeg
