--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,5 +35,5 @@ exclude = [
 select = ["I"]  # Enable import ordering checks
 
 [tool.ruff.lint.isort]
-known-local-folder = ["taichi", "tests"]
+known-local-folder = ["gs_taichi", "tests"]
 known-third-party = ["pytest"]
