reduce concurrency, and only test python 3.10

--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        MAC_OS_VERSION: [15]
-        PYTHON_CP_VERSION: [cp310, cp311, cp312, cp313]
+        # MAC_OS_VERSION: [15]
+        # PYTHON_CP_VERSION: [cp310, cp311, cp312, cp313]
         include:
           - MAC_OS_VERSION: 14
             PYTHON_CP_VERSION: cp310
@@ -44,8 +44,8 @@ jobs:
     environment: aws_storage
     strategy:
       matrix:
-        MAC_OS_VERSION: [15]
-        PYTHON_CP_VERSION: [cp310, cp311, cp312, cp313]
+        # MAC_OS_VERSION: [15]
+        # PYTHON_CP_VERSION: [cp310, cp311, cp312, cp313]
         include:
           - MAC_OS_VERSION: 14
             PYTHON_CP_VERSION: cp310
