--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
 jobs:
   build:
     name: Linters
