--- a/taichi/rhi/CMakeLists.txt
+++ b/taichi/rhi/CMakeLists.txt
@@ -14,7 +14,7 @@ target_include_directories(${TAICHI_DEVICE_API}
     ${PROJECT_SOURCE_DIR}
   )
 
-if (TI_WITH_VULKAN AND NOT ANDROID)
+if (TI_WITH_VULKAN)
   set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
   set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
   set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
