--- a/.github/workflows/linux_x86.yml
+++ b/.github/workflows/linux_x86.yml
@@ -13,6 +13,10 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+      - name: Python check
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
       - name: Linux x86 prerequisites
         run: |
           bash .github/workflows/scripts_new/linux_x86/1_prerequisites.sh
