--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = [
     "setuptools>=68.0.0",
     "wheel",
     "numpy>=2.0.0",
+    "pydantic",
     "pybind11",
     "pybind11-stubgen",
     "cmake>=3.11",
